tests/valid_tests/arithmetic.minijava
class Test {
    public static void main() {
        int a; int b; int c;
        a = 10;
        b = 3;
        c = a + b;
        System.out.println(c);
        c = a - b;
        System.out.println(c);
        c = a * b;
        System.out.println(c);
        c = a / b;
        System.out.println(c);
        c = a % b;
        System.out.println(c);
    }
} 
