tests/invalid_tests/while_condition_not_boolean.minijava
class WhileCondition {
    public static void main() {
        int i;
        i = 1;
        while (i) {
            i = i + 1;
        }
    }
}
